--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+        <link rel='shortcut icon' href='#' />
 		<title>tea orbit</title>
 		<script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.min.js'></script>
 		<script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.timeago.min.js'></script>
