--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             input#name { width: 20%; }
             input#submit { padding-right: 8px; }
 
-            #chat { position: absolute; top: 0; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; }
+            #chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; }
             #chat .inner { padding: 30px; }
             #chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px; border-radius: 3px; display: inline-block; margin: 2px 0; }
             #chat .date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; }
@@ -79,7 +79,7 @@
             and (max-device-width : 568px) { 
                 #header { height: 30px; padding: 0; }
                 #header h1 { margin: 0; padding: 0 30px; line-height: 30px; font-size: 12px; }
-                #show-map { line-height: 30px; font-size: 12px; }
+                #show-map { line-height: 30px; font-size: 12px; padding: 0 20px; }
                 #show-map img.map { display: none; }
                 #map-expanded { top: 30px; }
                 #map-expanded img.map { width: 250px; height: 250px; }
