new messages show up in window title

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         <script type='text/javascript'>
 
             window.networking = null;
+            window.title = "tea orbit";
 
             window.last_id = 0;
             window.latitude = null;
