--- a/templates/index.html
+++ b/templates/index.html
@@ -75,12 +75,13 @@
 
             #chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: auto; z-index: 50; }
             #chat .inner { padding: 30px; }
-            #chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px; border-radius: 3px; display: inline-block; margin: 2px 0; }
+            #chat .message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 25px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; }
             #chat .date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; }
             #chat .row:hover .date { color: #aaa; }
             #chat .name { color: #888; margin-right: 5px; }
             #chat .name:before { content: "[" }
             #chat .name:after { content: "] " }
+            #chat .color { display: inline-block; height: 16px; width: 16px; position: absolute; left: 5px; top: 50%; margin-top: -8px; border-radius: 8px;}
 
             #map-expanded { display: none; position: fixed; top: 50px; right: 0; background: #777; padding: 20px; text-align: center; z-index: 100; color: #ddd; }
             #map-expanded img.map { display: inline-block; width: 350px; height: 350px; vertical-align: middle; margin: 12px; box-shadow: 0 0 5px 0 rgba(0,0,0,0.5); }
