--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <title>tea orbit</title>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.cookie.js'></script>
+        <script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.linkify.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/jquery.timeago.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/modernizr.min.js'></script>
         <script type='text/javascript' src='{{ STATIC_URL }}scripts/basics.js'></script>
